started trip section
