# src/routes/documentRoute.js
@@ -2,7 +2,9 @@ import express from "express";
 import { insertDocument } from "../controllers/documentController.js";
 
 const router = express.Router();
-
+router.get("/", (_req, res) => {
+  res.send("welcome to documents");
+});
 router.post("/register-docs", insertDocument);
 
 export default router;
